Add CustomUser admin management with search, filter, pagination, block/unblock, sorting/add new styling

--- a/kiddora/templates/accounts/home.html
+++ b/kiddora/templates/accounts/home.html
@@ -1,9 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+<div class="container">
     <h1>Welcome to Kiddora</h1>
+</div>
 </body>
 </html>
