--- a/kiddora/templates/accounts/login.html
+++ b/kiddora/templates/accounts/login.html
@@ -1,26 +1,24 @@
 {% load static %}
+<!DOCTYPE html>
 <html>
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+<div class="container">
     <h2>Login</h2>
-
     {% if error %}
-        <p style="color:red;">{{ error }}</p>
+        <p class="error">{{ error }}</p>
     {% endif %}
-
     <form method="POST">
         {% csrf_token %}
-        <input type="text" name="username" placeholder="Username" required><br>
-        <input type="password" name="password" placeholder="Password" required><br>
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
-
-    <p>
-        Don't have an account? <a href="{% url 'accounts:signup' %}">Sign up</a><br>
-        Forgot password? <a href="{% url 'accounts:forgot_password' %}">Click here</a>
-    </p>
+    <p>Don't have an account? <a href="{% url 'accounts:signup' %}">Sign up</a></p>
+    <p>Forgot password? <a href="{% url 'accounts:forgot_password' %}">Click here</a></p>
+</div>
 </body>
 </html>
