--- a/kiddora/templates/accounts/reset_password.html
+++ b/kiddora/templates/accounts/reset_password.html
@@ -1,14 +1,23 @@
 {% load static %}
+<!DOCTYPE html>
 <html>
+<head>
+    <title>Reset Password</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
 <body>
-<h2>Reset Password</h2>
-{% if error %}<p style="color:red;">{{ error }}</p>{% endif %}
-<form method="POST">
-    {% csrf_token %}
-    <input type="text" name="otp" placeholder="Enter OTP" required><br>
-    <input type="password" name="new_password" placeholder="New Password" required><br>
-    <input type="password" name="confirm_password" placeholder="Confirm Password" required><br>
-    <button type="submit">Reset Password</button>
-</form>
+<div class="container">
+    <h2>Reset Password</h2>
+    {% if error %}
+        <p class="error">{{ error }}</p>
+    {% endif %}
+    <form method="POST">
+        {% csrf_token %}
+        <input type="password" name="password" placeholder="New Password" required>
+        <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+        <button type="submit">Reset Password</button>
+    </form>
+</div>
 </body>
 </html>
+
