--- a/kiddora/templates/accounts/login.html
+++ b/kiddora/templates/accounts/login.html
@@ -18,7 +18,7 @@
         <button type="submit">Login</button>
     </form>
     <p>Don't have an account? <a href="{% url 'accounts:signup' %}">Sign up</a></p>
-    <p>Forgot password? <a href="{% url 'accounts:forgot_password' %}">Click here</a></p>
+    <p><a href="{% url 'accounts:forgot_password' %}">Forgot password?</a></p>
 </div>
 </body>
 </html>
