Initial Django project setup with CustomUser model- updated on 27-12-2025

--- a/kiddora/templates/accounts/change_password.html
+++ b/kiddora/templates/accounts/change_password.html
@@ -1,9 +1,39 @@
-{% extends 'accounts/base.html' %}
-{% block content %}
-<h2>Change Password</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button>Update</button>
-</form>
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Change Password | Kiddora</title>
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+</head>
+<body>
+
+<div class="auth-container">
+    <div class="auth-card">
+
+        <div class="auth-left">
+            <h2>Change Password</h2>
+
+            <form method="post">
+                {% csrf_token %}
+                <input type="password" name="current_password" placeholder="Current Password" required>
+                <input type="password" name="new_password" placeholder="New Password" required>
+                <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+
+                <button type="submit" class="primary-btn">Update Password</button>
+            </form>
+
+            <a href="{% url 'accounts:login' %}" class="link">
+                Go back to Login page
+            </a>
+        </div>
+
+        <div class="auth-right">
+            <img src="{% static 'images/change_kid.png' %}">
+        </div>
+
+    </div>
+</div>
+
+</body>
+</html>
+
