--- a/kiddora/templates/accounts/signup.html
+++ b/kiddora/templates/accounts/signup.html
@@ -1,10 +1,46 @@
-{% extends 'accounts/base.html' %}
-{% block content %}
-<h2>Create Account</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button>Create</button>
-</form>
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Signup | Kiddora</title>
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+</head>
+<body>
+
+<div class="auth-container">
+    <div class="auth-card">
+
+        <div class="auth-left">
+            <h2>Create Account</h2>
+
+            <a href="{% url 'socialaccount_login' 'google' %}" class="google-btn">
+                <img src="{% static 'images/google.png' %}"> Signup with Google
+            </a>
+
+            <div class="divider">or</div>
+
+            <form method="post">
+                {% csrf_token %}
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+
+                <button type="submit" class="primary-btn">Sign Up</button>
+            </form>
+
+            <p class="bottom-text">
+                Already have an account?
+                <a href="{% url 'accounts:login' %}">Login now!</a>
+            </p>
+        </div>
+
+        <div class="auth-right">
+            <img src="{% static 'images/bcas1.jpeg' %}">
+        </div>
+
+    </div>
+</div>
+
+</body>
+</html>
 
