--- a/kiddora/templates/accounts/forgot_password.html
+++ b/kiddora/templates/accounts/forgot_password.html
@@ -1,26 +1,38 @@
-{% extends 'accounts/base.html' %}
-{% block title %}Forgot Password{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Forgot Password | Kiddora</title>
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+</head>
+<body>
 
-{% block content %}
-<div class="card p-4">
-  <div class="row align-items-center">
-    <div class="col-md-6">
-      <h3>Forgot Password?</h3>
+<div class="auth-container">
+    <div class="auth-card">
 
-      {% if error %}<p class="error">{{ error }}</p>{% endif %}
+        <div class="auth-left">
+            <h2>Forgot Password?</h2>
+            <p>Please confirm your email address</p>
 
-      <form method="post">
-        {% csrf_token %}
-        <input type="email" name="email" placeholder="Email address" required>
-        <button class="btn btn-primary w-100 mt-3">Send OTP</button>
-      </form>
+            <form method="post">
+                {% csrf_token %}
+                <input type="email" name="email" placeholder="Email address" required>
 
-      <a href="{% url 'accounts:login' %}">Back to login</a>
+                <button type="submit" class="primary-btn">Send OTP</button>
+            </form>
+
+            <a href="{% url 'accounts:login' %}" class="link">
+                Go back to Login page
+            </a>
+        </div>
+
+        <div class="auth-right">
+            <img src="{% static 'images/forgot_kid.png' %}">
+        </div>
+
     </div>
-
-    <div class="col-md-6 text-center">
-      <img src="{% static 'images/gparty14.jpeg' %}" class="img-fluid rounded">
-    </div>
-  </div>
 </div>
-{% endblock %}
+
+</body>
+</html>
+
