--- a/kiddora/templates/accounts/login.html
+++ b/kiddora/templates/accounts/login.html
@@ -1,11 +1,49 @@
-{% extends 'accounts/base.html' %}
-{% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button>Login</button>
-</form>
-<a href="{% url 'accounts:forgot_password' %}">Forgot Password?</a>
-{% endblock %}
+{% load static %}
+{% load socialaccount %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login | Kiddora</title>
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+</head>
+<body>
+
+<div class="auth-container">
+    <div class="auth-card">
+
+        <div class="auth-left">
+            <h2>Login</h2>
+
+            <a href="{% provider_login_url 'google' method='oauth2' %}" class="social-btn google-btn">Login with Google</a>
+            <a href="{% provider_login_url 'facebook' method='oauth2' %}" class="social-btn fb-btn">Login with Facebook</a>
+
+            <div class="divider">or</div>
+
+            <form method="post">
+                {% csrf_token %}
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+
+                <a href="{% url 'accounts:forget_password' %}" class="link">
+                    Forgot password?
+                </a>
+
+                <button type="submit" class="primary-btn">Login</button>
+            </form>
+
+            <p class="bottom-text">
+                New User? <a href="{% url 'accounts:signup' %}">Sign up now!</a>
+            </p>
+        </div>
+
+        <div class="auth-right">
+            <img src="{% static 'images/login_kid.png' %}">
+        </div>
+
+    </div>
+</div>
+
+</body>
+</html>
+
 
