--- a/kiddora/templates/accounts/reset_password.html
+++ b/kiddora/templates/accounts/reset_password.html
@@ -1,11 +1,40 @@
-{% extends 'accounts/base.html' %}
-{% block content %}
-<h2>Reset Password</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ otp_form.as_p }}
-    {{ form.as_p }}
-    <button>Reset</button>
-</form>
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Reset Password | Kiddora</title>
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+</head>
+<body>
+
+<div class="auth-container">
+    <div class="auth-card">
+
+        <div class="auth-left">
+            <h2>Reset Password?</h2>
+            <p>Please confirm your email address</p>
+
+            <form method="post">
+                {% csrf_token %}
+                <input type="email" name="email" placeholder="Email address" required>
+                <input type="text" name="otp" placeholder="Enter OTP" required>
+                <input type="password" name="password" placeholder="New Password" required>
+                <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+                <button type="submit" class="primary-btn">Send OTP</button>
+            </form>
+
+            <a href="{% url 'accounts:login' %}" class="link">
+                Go back to Login page
+            </a>
+        </div>
+
+        <div class="auth-right">
+            <img src="{% static 'images/reset_kid.PNG' %}">
+        </div>
+
+    </div>
+</div>
+
+</body>
+</html>
 
