login.html is working perfectly, sugnup template a well

--- a/kiddora/templates/accounts/login.html
+++ b/kiddora/templates/accounts/login.html
@@ -14,9 +14,7 @@
         <div class="auth-left">
             <h2>Login</h2>
 
-            <a href="{% provider_login_url 'google' method='oauth2' %}" class="social-btn google-btn">Login with Google</a>
-            <a href="{% provider_login_url 'facebook' method='oauth2' %}" class="social-btn fb-btn">Login with Facebook</a>
-
+        
             <div class="divider">or</div>
 
             <form method="post">
@@ -37,7 +35,7 @@
         </div>
 
         <div class="auth-right">
-            <img src="{% static 'images/login_kid.png' %}">
+            <img src="{% static 'images/gcas1.jpeg' %}">
         </div>
 
     </div>
